--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,37 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: black;
+  --foreground: white;
+
+  --ease-out-smooth: cubic-bezier(0.365, 0.041, 0.122, 0.983);
+  --ease-heavy: cubic-bezier(1, 0, 0.5, 1);
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-mono: var(--font-xahn-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  scroll-behavior: smooth !important;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+.font-gleam,
+.font-gleam > span {
+  background-image: linear-gradient(
+    170deg,
+    rgba(255, 255, 255, 0.5) 0,
+    rgba(255, 255, 255, 1) 60%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
